--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
   ];
 
 // =================== SUPABASE (SETTINGS SYNC ONLY) ===================
-const SUPABASE_URL = "PASTE_YOUR_PROJECT_URL";
-const SUPABASE_ANON_KEY = "PASTE_YOUR_ANON_KEY";
+const SUPABASE_URL = "https://wdsdfsnozzfljjqydcgs.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indkc2Rmc25venpmbGpqcXlkY2dzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIxMzUxNDcsImV4cCI6MjA4NzcxMTE0N30.1wVMaytWX-vU3BmfYqZU-GlRICW9rntfDnJcWKP9q_w";
 const SETTINGS_ROW_ID = "main";
 
 const supabaseEnabled =
