--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
         <button class="btn btnSmall" id="btnCloudPull">Sync From Cloud</button>
         <button class="btn btnSmall" id="btnCloudSignIn">Sign In</button>
         <button class="btn btnSmall" id="btnCloudSignOut">Sign Out</button>
+        <button class="btn btnSmall" id="sbTestUpdate">Test Cloud Update</button>
       </div>
     </div>
 
