--- a/index.html
+++ b/index.html
@@ -479,6 +479,10 @@
 
   <!-- ADMIN VIEW -->
   <div id="viewAdmin" style="display:none;">
+   <button class="btn btnSmall" id="sbSignIn">Supabase Sign In</button>
+   <button class="btn btnSmall" id="sbSignOut">Supabase Sign Out</button>
+   <button class="btn btnSmall" id="sbPull">Sync From Cloud</button> 
+
    <div class="card">
       <h3 class="sectionTitle">Admin</h3>
       <div class="muted">Edit birds placed, feed rates, and clear data.</div>
@@ -490,7 +494,6 @@
         <button class="btn btnSmall" id="btnCloudPull">Sync From Cloud</button>
         <button class="btn btnSmall" id="btnCloudSignIn">Sign In</button>
         <button class="btn btnSmall" id="btnCloudSignOut">Sign Out</button>
-        <button class="btn btnSmall" id="sbTestUpdate">Test Cloud Update</button>
       </div>
     </div>
 
@@ -667,29 +670,22 @@ async function pushSettingsToCloud() {
   }
 
   alert("Pushed settings to cloud.");
-  }
+}
 
-  $("sbTestUpdate").onclick = async () => {
-    const { data: sess } = await supabaseClient.auth.getSession();
-    alert(sess.session ? "SIGNED IN ✅" : "NOT SIGNED IN ❌");
+async function sbSignIn() {
+  const email = prompt("Supabase email:");
+  const password = prompt("Supabase password:");
+  if (!email || !password) return;
 
-    const payload = { test: Date.now() };
+  const { error } = await supabaseClient.auth.signInWithPassword({ email, password });
+  if (error) alert("Sign in failed:\n" + error.message);
+  else alert("Signed in ✅");
+}
 
-    const { data, error } = await supabaseClient
-      .from("app_settings")
-      .update({ data: payload })
-      .eq("id", "main")
-      .select();
-
-    if (error) {
-      alert("UPDATE FAILED:\n" + error.message);
-      console.log(error);
-      return;
-  }
-
-    alert("UPDATE OK. Rows updated: " + (data ? data.length : 0));
-    console.log("updated rows:", data);
-  };
+async function sbSignOut() {
+  await supabaseClient.auth.signOut();
+  alert("Signed out.");
+}
 
 // Optional: simple sign-in helpers (put buttons in Admin if you want)
 async function supabaseSignIn() {
