--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 <body>
 <div class="wrap">
-  <h2>FlockFlow</h2>
+  <h2>House Logger (Offline)</h2>
   <div class="muted">Offline logging for eggs, floor eggs, egg defects, mortality, and feed. Export CSV anytime.</div>
 
   <div class="nav">
